kubernetes/maciejos-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maciejos
  namespace: maciejos
spec:
  selector:
    matchLabels:
      app: maciejos
      tier: maciejos
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: maciejos
        tier: maciejos
        track: stable
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: NotIn
                    values:
                      - k8s-node-c
      containers:
        - name: maciejos
          image: nas:6000/maciejos:prod
          imagePullPolicy: Always
          ports:
            - containerPort: 80
