kubernetes/maciejos-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: maciejos
  namespace: maciejos
spec:
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 80
  selector:
    app: maciejos
    tier: maciejos
    track: stable
  type: NodePort
